[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ascaiogram"
version = "0.1.0"
description = ""
authors = ["AscenderNative Core"]
readme = "README.md"
packages = [{include = "app"}]
# name = "ascaiogram"
# version = "0.1"
# description = ""
# authors = ["Your Name <you@example.com>"]
# include = ["src/*"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-file = "src/ascaiogram/__init__.py"