[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ascaiogram"
version = "0.1.0"
description = ""
authors = ["AscenderNative Core"]
readme = "README.md"
packages = [{include = "ascaiogram"}]

[tool.poetry.dependencies]
python = "^3.10"
# asccore = { git = "https://github.com/ascender-native/ascender_core.git", tag = "v0.1.0" }
asccore = "*"
ascender = "*"
aiogram = "^3"

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-file = "ascaiogram/__init__.py"
